[gd_scene load_steps=11 format=3 uid="uid://bryqodvh4q0wf"]

[ext_resource type="Script" path="res://tag_editor.gd" id="1_smm67"]
[ext_resource type="Texture2D" uid="uid://cd3gogi46rkjm" path="res://save_icon.png" id="2_dcr5n"]
[ext_resource type="Texture2D" uid="uid://d2uaetwhuym3k" path="res://icon.svg" id="2_i38k3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mncjo"]

[sub_resource type="Gradient" id="Gradient_dtmya"]
colors = PackedColorArray(0.0470588, 0.0470588, 0.0470588, 1, 0.235294, 0.235294, 0.235294, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_u0pvp"]
gradient = SubResource("Gradient_dtmya")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g56ok"]
texture = SubResource("GradientTexture1D_u0pvp")

[sub_resource type="Gradient" id="Gradient_aai4x"]
colors = PackedColorArray(0.235294, 0.235294, 0.235294, 0, 0.0470588, 0.0470588, 0.0470588, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_07uby"]
gradient = SubResource("Gradient_aai4x")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_crcfx"]
texture = SubResource("GradientTexture1D_07uby")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_smm67")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
tooltip_text = "Save"
disabled = true
icon = ExtResource("2_dcr5n")
icon_alignment = 1
expand_icon = true

[node name="SwapView" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Files/Preview"
text = "F/P"

[node name="ShowSelectedToggle" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Only Show Selected"
text = "SS:"

[node name="SelectedCounter" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0/0"

[node name="SelectNone" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "None
"

[node name="SelectAll" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "All"

[node name="PreviewSize" type="HSlider" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 50.0
max_value = 400.0
step = 10.0
value = 200.0
rounded = true
tick_count = 8

[node name="ChooseDir" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Pick Dir"

[node name="CurDir" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5
theme_override_constants/minimum_grab_thickness = 3

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
tabs_visible = false

[node name="FileList" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/TabContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HSplitContainer/TabContainer/FileList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 2

[node name="ImageThumbs" type="HFlowContainer" parent="VBoxContainer/HSplitContainer/TabContainer/FileList/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12

[node name="ImageView" type="TextureRect" parent="VBoxContainer/HSplitContainer/TabContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_i38k3")
expand_mode = 1
stretch_mode = 5

[node name="BackButton" type="Button" parent="VBoxContainer/HSplitContainer/TabContainer/ImageView"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.2
anchor_bottom = 1.0
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.196078)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_mncjo")
theme_override_styles/hover = SubResource("StyleBoxTexture_g56ok")
text = "  <"
alignment = 0

[node name="FwButton" type="Button" parent="VBoxContainer/HSplitContainer/TabContainer/ImageView"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.196078)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_mncjo")
theme_override_styles/hover = SubResource("StyleBoxTexture_crcfx")
text = ">  "
alignment = 2

[node name="ScrollContainer2" type="ScrollContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HSplitContainer/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_right = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Priority Tags:"

[node name="HBoxNewPriorityTag" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NewPriorityTagButton" type="Button" parent="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer/HBoxNewPriorityTag"]
layout_mode = 2
text = "+
"

[node name="NewPriorityTagName" type="LineEdit" parent="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer/HBoxNewPriorityTag"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New Priority Tag"
select_all_on_focus = true

[node name="PriorityTagContainer" type="PanelContainer" parent="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="PriorityTagList" type="HFlowContainer" parent="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer/PriorityTagContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Selected File Tags:"

[node name="HBoxNewTag" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NewTagButton" type="Button" parent="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer/HBoxNewTag"]
layout_mode = 2
text = "+
"

[node name="NewTagName" type="LineEdit" parent="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer/HBoxNewTag"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New Tag"
select_all_on_focus = true

[node name="FileTagContainer" type="PanelContainer" parent="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="FileTagList" type="HFlowContainer" parent="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer/FileTagContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="save"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SwapView" to="." method="_on_swap_view_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/ShowSelectedToggle" to="." method="_on_show_selected_toggle_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SelectNone" to="." method="clear_selection"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SelectAll" to="." method="select_all"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/PreviewSize" to="." method="_on_preview_size_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ChooseDir" to="." method="_on_choose_dir_pressed"]
[connection signal="gui_input" from="VBoxContainer/HSplitContainer/TabContainer/ImageView" to="." method="_on_image_view_gui_input"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/TabContainer/ImageView/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/TabContainer/ImageView/FwButton" to="." method="_on_fw_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer/HBoxNewPriorityTag/NewPriorityTagButton" to="." method="_on_new_priority_tag_button_pressed"]
[connection signal="text_submitted" from="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer/HBoxNewPriorityTag/NewPriorityTagName" to="." method="_on_new_priority_tag_name_text_submitted"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer/HBoxNewTag/NewTagButton" to="." method="_on_new_tag_button_pressed"]
[connection signal="text_submitted" from="VBoxContainer/HSplitContainer/ScrollContainer2/MarginContainer/VBoxContainer/HBoxNewTag/NewTagName" to="." method="_on_new_tag_name_text_submitted"]
